web/css/new-age.css
/*!
 * Start Bootstrap - New Age v5.0.7 (https://startbootstrap.com/template-overviews/new-age)
 * Copyright 2013-2019 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-new-age/blob/master/LICENSE)
 */
.videos-sync {
  top: -20%;
}
.sync-vid {
  position: absolute;
  border-radius: 20%;
  overflow: hidden;
  -webkit-transform: translateZ(0);
  box-shadow: 0 19px 51px 0 rgba(0, 0, 0, 0.16),
    0 14px 19px 0 rgba(0, 0, 0, 0.07);
}

.sync-vid-1 {
  width: 120%;
}
@media (max-width: 992px) {
  .sync-vid-1,
  .sync-vid-2 {
    display: none;
  }
}

.sync-vid-2 {
  width: 50%;
  right: 80%;
  top: 15rem;
}

.imagen-fondo {
  position: absolute;
  border-radius: 10%;
  top: 10%;
}
@media (max-width: 1200px) {
  .imagen-fondo {
    max-width: 300px;
    display: block;
  }
}
@media (max-width: 992px) {
  .imagen-fondo {
    display: none;
  }
}

html,
body {
  width: 100%;
  height: 100%;
}

body {
  font-family: "Muli", "Helvetica", "Arial", "sans-serif";
}

a {
  color: #0d95e8;
  transition: all 0.35s;
}

a:hover,
a:focus {
  color: #09b1e9;
}

a #extension {
  color: white !important;
  transition: all 0.35s;
}

hr {
  max-width: 100px;
  margin: 25px auto 0;
  border-width: 1px;
  border-color: rgba(34, 34, 34, 0.1);
}

hr.light {
  border-color: white;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Catamaran", "Helvetica", "Arial", "sans-serif";
  font-weight: 200;
  letter-spacing: 1px;
}

p {
  font-size: 18px;
  line-height: 1.5;
  margin-bottom: 20px;
}

section {
  padding: 100px 0;
}

section h2 {
  font-size: 50px;
}

#mainNav {
  border-color: rgba(34, 34, 34, 0.05);
  background-color: white;
  transition: all 0.35s;
  font-family: "Catamaran", "Helvetica", "Arial", "sans-serif";
  font-weight: 200;
  letter-spacing: 1px;
}

#mainNav .navbar-brand {
  color: #f8981d;
  font-family: "News Cycle", sans-serif;
  font-weight: 200;
  letter-spacing: 2px;
  font-size: 2rem;
}

#mainNav .navbar-brand:hover,
#mainNav .navbar-brand:focus {
  color: #fcbd20;
}

#mainNav .navbar-toggler {
  font-size: 12px;
  padding: 8px 10px;
  color: #222222;
}

#mainNav .navbar-nav > li > a {
  font-size: 11px;
  font-family: "Lato", "Helvetica", "Arial", "sans-serif";
  letter-spacing: 2px;
  text-transform: uppercase;
}

#mainNav .navbar-nav > li > a.active {
  color: #11698a;
  font-weight: 500;
  background-color: transparent;
}

#mainNav .navbar-nav > li > a.active:hover {
  background-color: transparent;
}

#mainNav .navbar-nav > li > a,
#mainNav .navbar-nav > li > a:focus {
  color: #222222;
}

#mainNav .navbar-nav > li > a:hover,
#mainNav .navbar-nav > li > a:focus:hover {
  color: #09b1e9;
}

@media (min-width: 992px) {
  #mainNav {
    border-color: transparent;
    background-color: transparent;
  }
  #mainNav .navbar-brand {
    color: fade(white, 70%);
  }
  #mainNav .navbar-brand:hover,
  #mainNav .navbar-brand:focus {
    color: white;
  }
  #mainNav .navbar-nav > li > a,
  #mainNav .navbar-nav > li > a:focus {
    color: rgba(255, 255, 255, 0.7);
  }
  #mainNav .navbar-nav > li > a:hover,
  #mainNav .navbar-nav > li > a:focus:hover {
    color: white;
  }
  #mainNav.navbar-shrink {
    border-color: rgba(34, 34, 34, 0.1);
    background-color: white;
  }
  #mainNav.navbar-shrink .navbar-brand {
    color: #222222;
  }
  #mainNav.navbar-shrink .navbar-brand:hover,
  #mainNav.navbar-shrink .navbar-brand:focus {
    color: #f8981d;
  }
  #mainNav.navbar-shrink .navbar-nav > li > a {
    color: #222222;
  }
  #mainNav.navbar-shrink .navbar-nav > li > a:focus,
  #mainNav.navbar-shrink .navbar-nav > li > a.active {
    color: #11698a;
  }
  #mainNav.navbar-shrink .navbar-nav > li > a:hover,
  #mainNav.navbar-shrink .navbar-nav > li > a:focus:hover {
    color: #09b1e9;
  }
}

header.masthead {
  position: relative;
  width: 100%;
  padding-top: 150px;
  padding-bottom: 100px;
  background: linear-gradient(to left, #09b1e9, #1a242e);
}

header.masthead .header-content {
  max-width: 500px;
  margin-bottom: 50px;
  margin-top: 50px;
  text-align: center;
}

header.masthead .header-content h1 {
  font-size: 30px;
  color: white;
}

header.masthead .device-container {
  max-width: 325px;
  margin-right: auto;
  margin-left: auto;
}

header.masthead .device-container .screen img {
  border-radius: 3px;
}

@media (min-width: 992px) {
  header.masthead {
    height: 100vh;
    min-height: 775px;
    padding-top: 0;
    padding-bottom: 0;
  }
  header.masthead .header-content {
    margin-bottom: 0;
    text-align: left;
  }
  header.masthead .header-content h1 {
    font-size: 50px;
  }
  header.masthead .device-container {
    max-width: 325px;
  }
  .my-auto {
    padding-right: 0;
  }
}

section.download {
  position: relative;
  padding: 150px 0;
}

section.download h2 {
  font-size: 50px;
  margin-top: 0;
}

section.download .badges .badge-link {
  display: block;
  margin-bottom: 25px;
}

section.download .badges .badge-link:last-child {
  margin-bottom: 0;
}

section.download .badges .badge-link img {
  height: 60px;
}

@media (min-width: 768px) {
  section.download .badges .badge-link {
    display: inline-block;
    margin-bottom: 0;
  }
}

@media (min-width: 768px) {
  section.download h2 {
    font-size: 70px;
  }
}

section.features .section-heading {
  margin-bottom: 5%;
}

section.features .section-heading h2 {
  margin-top: 0;
}

section.features .section-heading p {
  margin-bottom: 0;
}

section.features .device-container,
section.features .feature-item {
  max-width: 325px;
  margin: 5% auto;
}

section.features .device-container {
  margin-bottom: 100px;
}

@media (min-width: 992px) {
  section.features .device-container {
    margin-bottom: 0;
  }
}

section.features .feature-item {
  /*background-color: #3d3d3d;
  border-radius: 25px;*/
  padding: 5% 0% 2% 0%;
  text-align: center;
}

section.features .feature-item h3 {
  font-size: 30px;
  /*color: white;*/
}

section.features .feature-item i {
  font-size: 80px;
  display: block;
  margin-bottom: 15px;
  background: #f8981d;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
/*section.features .feature-item p {
  color: #bfc1c2 !important;
}*/

section.cta {
  position: relative;
  padding: 250px 0;
  background-image: url("../img/bg-cta.jpg");
  background-position: center;
  background-size: cover;
}

section.cta .cta-content {
  position: relative;
  z-index: 1;
}

section.cta .cta-content h2 {
  font-size: 50px;
  max-width: 450px;
  margin-top: 0;
  margin-bottom: 25px;
  color: white;
}

@media (min-width: 768px) {
  section.cta .cta-content h2 {
    font-size: 80px;
  }
}

section.cta .overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
}

section.contact {
  text-align: center;
  padding: 50px 0;
}

section.contact h2 {
  margin-top: 0;
  margin-bottom: 20px;
}

@media (max-width: 768px) {
  section.contact h2 {
    font-size: 40px;
  }
}
@media (max-width: 400px) {
  section.contact h2 {
    font-size: 25px;
  }
}

section.contact h2 i {
  color: #dd4b39;
}

section.contact ul.list-social {
  margin-bottom: 0;
}

section.contact ul.list-social li a {
  font-size: 40px;
  line-height: 80px;
  display: block;
  width: 80px;
  height: 80px;
  color: white;
  border-radius: 100%;
}

section.contact ul.list-social li.social-github a {
  background-color: transparent;
}

section.contact ul.list-social li.social-twitter a:hover {
  background-color: #0d95e8;
}

footer {
  padding: 25px 0;
  text-align: center;
  color: rgba(255, 255, 255, 0.7);
  background-color: #222222;
}

footer p {
  font-size: 12px;
  margin: 0;
}

footer ul {
  margin-bottom: 0;
}

footer a {
  color: #f8981d;
}

footer a:hover,
footer a:focus,
footer a:active,
footer a.active {
  text-decoration: none;
  color: #fcbd20;
}

.bg-primary {
  background: #f8981d !important;
}

.text-primary {
  color: #f8981d;
}

.no-gutter > [class*="col-"] {
  padding-right: 0;
  padding-left: 0;
}

.btn-outline {
  color: white;
  border: 1px solid;
  border-color: white;
}

.btn-outline:hover,
.btn-outline:focus,
.btn-outline:active,
.btn-outline.active {
  color: white;
  border-color: #f8981d;
  background-color: #f8981d;
}

.btn {
  border-radius: 300px;
  font-family: "Lato", "Helvetica", "Arial", "sans-serif";
  letter-spacing: 2px;
  text-transform: uppercase;
}

.btn-xl {
  font-size: 11px;
  padding: 15px 45px;
}

